# GameOfLife-SFML

./: .gitignore  CMakeLists.txt  README.md
include/: Game.h  GameOfLife.h  Global.h
src/: Game.cpp  GameOfLife.cpp  main.cpp
